Fix spacing between details and numbers

--- a/scss/pages/homepage.scss
+++ b/scss/pages/homepage.scss
@@ -75,7 +75,7 @@
             .details {
                 font: normal 12px/15px $Ideal;
                 min-height: 64px;
-                padding: 38px 64px 0 56px;
+                padding: 38px 144px 0 56px;
                 .owner a {
                     color: $medium-gray;
                     position: relative;
